Fix relative path issue
Change-Id: Ib0b949decbb6f0161e6a19f90f1eb039c58a3ccc

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -41,7 +41,7 @@
 						</button>
 
 						<a class="navbar-brand" href="<%= locale_url('./') %>">
-							<img src="./images/logo.png" />
+							<img src="/images/logo.png" />
 							<% if request.path != 'index.html'  %>
 								<span class="name"><%= t('menu.title') %></span>
 							<% end %>
@@ -63,7 +63,7 @@
 			<footer>
 				<div class="footer__block col-md-5">
 					<a href="<%= locale_url('./') %>" class="home_link">
-						<img src="./images/logo.png">
+						<img src="/images/logo.png">
 						<span><%= t('menu.title') %></span>
 					</a>
 				</div>
