--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -35,7 +35,7 @@
     <p><%= t('content.quote') %></p>
     <footer>
       <a href="//commons.wikimedia.org/wiki/File:Flag_of_the_United_Nations.svg">
-      	<img src="./images/un_flag.png">
+      	<img src="/images/un_flag.png">
       </a>
       <p><%= t('content.cite') %></p>
     </footer>
@@ -45,7 +45,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Un_d%C3%AEner_de_philosophes.Jean_Huber.jpg">
-    	<img class="story_count_me__img" src="./images/story_count_me.jpg">
+    	<img class="story_count_me__img" src="/images/story_count_me.jpg">
     </a>
     <h3><%= t('content.story_count_me_title') %></h3>
     <p><%= t('content.story_count_me_body') %></p>
@@ -55,7 +55,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Expo-Flags.jpg">
-    	<img src="./images/story_political_discussions.jpg" >
+    	<img src="/images/story_political_discussions.jpg" >
     </a>
     <h3><%= t('content.story_political_discussions_title') %></h3>
     <p><%= t('content.story_political_discussions_body') %></p>
@@ -65,7 +65,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Toyogeki-Movie_Toyooka002.jpg">
-    	<img class="story_room__img" src="./images/story_room.jpg">
+    	<img class="story_room__img" src="/images/story_room.jpg">
     </a>
     <h3><%= t('content.story_room_title') %></h3>
     <p><%= t('content.story_room_body') %></p>
@@ -282,7 +282,7 @@
     <p><%= t('content.erasure_quote') %></p>
     <footer>
       <a href="//commons.wikimedia.org/wiki/File:Das_Recht_auf_Wissen_%E2%80%93_f%C3%BCr_eine_progressive_Netzpolitik_(6996713652).jpg">
-      	<img src="./images/lawrence.png">
+      	<img src="/images/lawrence.png">
       </a>
       <p><%= t('content.erasure_cite') %></p>
     </footer>
@@ -292,7 +292,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:World_Map_1689.JPG">
-    	<img src="./images/story_quantity_quality.jpg">
+    	<img src="/images/story_quantity_quality.jpg">
     </a>
     <h3><%= t('content.story_quantity_quality_title') %></h3>
     <p><%= t('content.story_quantity_quality_body') %></p>
@@ -302,7 +302,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Television_(8674797024).jpg">
-    	<img src="./images/story_spoiler.jpg">
+    	<img src="/images/story_spoiler.jpg">
     </a>
     <h3><%= t('content.story_spoiler_title') %></h3>
     <p><%= t('content.story_spoiler_body') %></p>
@@ -312,7 +312,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Large_copyright_graffiti_sign_on_cream_colored_wall_(4273272605).jpg">
-    	<img class="story_fair_share__img" src="./images/story_fair_share.jpg">
+    	<img class="story_fair_share__img" src="/images/story_fair_share.jpg">
     </a>
     <h3><%= t('content.story_fair_share_title') %></h3>
     <p><%= t('content.story_fair_share_body') %></p>
