--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -8,205 +8,205 @@
 
 <div class="col-md-12">
 	<a name="information"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_information') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_information') %></span></h2>
 	<div class="answer"><%= t('faq.a_information') %></div>
 
 	<hr>
 
 	<a name="standards"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_standards') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_standards') %></span></h2>
 	<div class="answer"><%= t('faq.a_standards') %></div>
 
 	<hr>
 
 	<a name="request_abroad"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_request_abroad') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_request_abroad') %></span></h2>
 	<div class="answer"><%= t('faq.a_request_abroad') %></div>
 
 	<hr>
 
 	<a name="my_personal_information"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_my_personal_information') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_my_personal_information') %></span></h2>
 	<div class="answer"><%= t('faq.a_my_personal_information') %></div>
 
 	<hr>
 
 	<a name="information_produced"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_information_produced') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_information_produced') %></span></h2>
 	<div class="answer"><%= t('faq.a_information_produced') %></div>
 
 	<hr>
 
 	<a name="information_produced_diff"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_information_produced_diff') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_information_produced_diff') %></span></h2>
 	<div class="answer"><%= t('faq.a_information_produced_diff') %></div>
 
 	<hr>
 
 	<a name="informal_non_government_requests"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_informal_non_government_requests') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_informal_non_government_requests') %></span></h2>
 	<div class="answer"><%= t('faq.a_informal_non_government_requests') %></div>
 
 	<hr>
 
 	<a name="informal_government_requests"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_informal_government_requests') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_informal_government_requests') %></span></h2>
 	<div class="answer"><%= t('faq.a_informal_government_requests') %></div>
 
 	<hr>
 
 	<a name="civil_subpoena"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_civil_subpoena') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_civil_subpoena') %></span></h2>
 	<div class="answer"><%= t('faq.a_civil_subpoena') %></div>
 
 	<hr>
 
 	<a name="criminal_subpoena"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_criminal_subpoena') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_criminal_subpoena') %></span></h2>
 	<div class="answer"><%= t('faq.a_criminal_subpoena') %></div>
 
 	<hr>
 
 	<a name="administrative_subpoena"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_administrative_subpoena') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_administrative_subpoena') %></span></h2>
 	<div class="answer"><%= t('faq.a_administrative_subpoena') %></div>
 
 	<hr>
 
 	<a name="search_warrant"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_search_warrant') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_search_warrant') %></span></h2>
 	<div class="answer"><%= t('faq.a_search_warrant') %></div>
 
 	<hr>
 
 	<a name="court_order"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_court_order') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_court_order') %></span></h2>
 	<div class="answer"><%= t('faq.a_court_order') %></div>
 
 	<hr>
 
 	<a name="national_security_request"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_national_security_request') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_national_security_request') %></span></h2>
 	<div class="answer"><%= t('faq.a_national_security_request') %></div>
 
 	<hr>
 
 	<a name="wiretap"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_wiretap') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_wiretap') %></span></h2>
 	<div class="answer"><%= t('faq.a_wiretap') %></div>
 
 	<hr>
 
 	<a name="writs_act"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_writs_act') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_writs_act') %></span></h2>
 	<div class="answer"><%= t('faq.a_writs_act') %></div>
 
 	<hr>
 
 	<a name="potentially_affected"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_potentially_affected') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_potentially_affected') %></span></h2>
 	<div class="answer"><%= t('faq.a_potentially_affected') %></div>
 
 	<hr>
 
 	<a name="actually_affected"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_actually_affected') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_actually_affected') %></span></h2>
 	<div class="answer"><%= t('faq.a_actually_affected') %></div>
 
 	<hr>
 
 	<a name="nonpublic_personal_information"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_legal_process_subpoena') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_legal_process_subpoena') %></span></h2>
 	<div class="answer"><%= t('faq.a_legal_process_subpoena') %></div>
 
 	<hr>
 
 	<a name="preservation_request"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_preservation_request') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_preservation_request') %></span></h2>
 	<div class="answer"><%= t('faq.a_preservation_request') %></div>
 
 	<hr>
 
 	<a name="voluntary_disclosure"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_emergency_disclosure') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_emergency_disclosure') %></span></h2>
 	<div class="answer"><%= t('faq.a_emergency_disclosure') %></div>
 
 	<hr>
 
 	<a name="right_erasure"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_right_erasure') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_right_erasure') %></span></h2>
 	<div class="answer"><%= t('faq.a_right_erasure') %></div>
 
 	<hr>
 
 	<a name="different_compare"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_different_compare') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_different_compare') %></span></h2>
 	<div class="answer"><%= t('faq.a_different_compare') %></div>
 
 	<hr>
 
 	<a name="improve_laws"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_improve_laws') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_improve_laws') %></span></h2>
 	<div class="answer"><%= t('faq.a_improve_laws') %></div>
 
 	<hr>
 
 	<a name="resolve_content_disputes"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_resolve_content_disputes') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_resolve_content_disputes') %></span></h2>
 	<div class="answer"><%= t('faq.a_resolve_content_disputes') %></div>
 
 	<hr>
 
 	<a name="im_being_sued"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_im_being_sued') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_im_being_sued') %></span></h2>
 	<div class="answer"><%= t('faq.a_im_being_sued') %></div>
 
 	<hr>
 
 	<a name="remove_content"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_remove_content') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_remove_content') %></span></h2>
 	<div class="answer"><%= t('faq.a_remove_content') %></div>
 
 	<hr>
 
 	<a name="dmca_valid_proper"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_dmca_valid_proper') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_dmca_valid_proper') %></span></h2>
 	<div class="answer"><%= t('faq.a_dmca_valid_proper') %></div>
 
 	<hr>
 
 	<a name="transparent_dmca"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_transparent_dmca') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_transparent_dmca') %></span></h2>
 	<div class="answer"><%= t('faq.a_transparent_dmca') %></div>
 
 	<hr>
 
 	<a name="counter_notices"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_counter_notices') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_counter_notices') %></span></h2>
 	<div class="answer"><%= t('faq.a_counter_notices') %></div>
 
 	<hr>
 
 	<a name="six_month"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_six_month') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_six_month') %></span></h2>
 	<div class="answer"><%= t('faq.a_six_month') %></div>
 
 	<hr>
 
 	<a name="count_requests"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_count_requests') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_count_requests') %></span></h2>
 	<div class="answer"><%= t('faq.a_count_requests') %></div>
 
 	<hr>
 
 	<a name="targeted_takedown"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_targeted_takedown') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_targeted_takedown') %></span></h2>
 	<div class="answer"><%= t('faq.a_targeted_takedown') %></div>
 
 	<hr>
 
 	<a name="projects_affected"></a>
-	<h2 class="question"><img src="./images/chevron.svg"><span><%= t('faq.q_projects_affected') %></span></h2>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_projects_affected') %></span></h2>
 	<div class="answer"><%= t('faq.a_projects_affected') %></div>
 
 
