--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -35,7 +35,7 @@
 	<blockquote>
 		<p><%= t('privacy.quote') %></p>
 		<footer>
-			<a href="//commons.wikimedia.org/wiki/File:Sonia_Sotomayor_7_in_robe,_2009.jpg"><img src="./images/sonia.jpg"></a>
+			<a href="//commons.wikimedia.org/wiki/File:Sonia_Sotomayor_7_in_robe,_2009.jpg"><img src="/images/sonia.jpg"></a>
 			<p><%= t('privacy.cite') %></p>
 		</footer>
 	</blockquote>
@@ -344,7 +344,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <a href="//commons.wikimedia.org/wiki/File:LED_Verkehrssicherungsbalken.jpg"><img src="./images/story_emergency.png"></a>
+    <a href="//commons.wikimedia.org/wiki/File:LED_Verkehrssicherungsbalken.jpg"><img src="/images/story_emergency.png"></a>
     <h3><%= t('privacy.story_emergency_title') %></h3>
     <p><%= t('privacy.story_emergency_body') %></p>
   </div>
@@ -352,7 +352,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <a href="//commons.wikimedia.org/wiki/White_House#mediaviewer/File:SouthPorticoChristmas.jpg"><img src="./images/story_whitehouse.png"></a>
+    <a href="//commons.wikimedia.org/wiki/White_House#mediaviewer/File:SouthPorticoChristmas.jpg"><img src="/images/story_whitehouse.png"></a>
     <h3><%= t('privacy.story_whitehouse_title') %></h3>
     <p><%= t('privacy.story_whitehouse_body') %></p>
   </div>
@@ -360,7 +360,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <a href="//commons.wikimedia.org/wiki/File:Suicide_Prevention_Day.jpg"><img src="./images/story_suicide.png"></a>
+    <a href="//commons.wikimedia.org/wiki/File:Suicide_Prevention_Day.jpg"><img src="/images/story_suicide.png"></a>
     <h3><%= t('privacy.story_suicide_title') %></h3>
     <p><%= t('privacy.story_suicide_body') %></p>
   </div>
