--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -18,7 +18,7 @@
 		<h3><%= t('home.privacy') %></h3>
 		<hr/>
 		<p>
-			<img class="icon" src="./images/userdata.svg">
+			<img class="icon" src="/images/userdata.svg">
 		</p>
 	</a>
 </div>
@@ -28,7 +28,7 @@
 		<h3><%= t('home.content') %></h3>
 		<hr/>
 		<p>
-			<img class="icon" src="./images/content1.svg">
+			<img class="icon" src="/images/content1.svg">
 		</p>
 	</a>
 </div>
@@ -38,7 +38,7 @@
 		<h3><%= t('home.faq') %></h3>
 		<hr/>
 		<p>
-			<img class="icon" src="./images/faq.svg">
+			<img class="icon" src="/images/faq.svg">
 		</p>
 	</a>
 </div>
@@ -49,7 +49,7 @@
     <p><%= t('home.quote') %></p>
     <footer>
       <a href="//commons.wikimedia.org/wiki/File:Nadine_Gordimer_01.JPG">
-				<img src="./images/nadine.jpg">
+				<img src="/images/nadine.jpg">
 			</a>
       <p><%= t('home.cite') %></p>
     </footer>
