--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -5,7 +5,6 @@
     </span>
   </h1>
 </div>
-
 <div class="col-md-3">
   <section class="scorecard">
     <h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</h2>
@@ -14,7 +13,6 @@
       <dd>343</dd>
     </dl>
   </section>
-
   <section class="scorecard scorecard_bottom">
     <h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</h2>
     <dl>
@@ -23,66 +21,57 @@
     </dl>
   </section>
 </div>
-
 <div class="col-md-8">
   <p class="lead">
     <%= t('content.lead') %>
   </p>
-
   <%= t('content.intro') %>
-
   <blockquote>
     <p><%= t('content.quote') %></p>
     <footer>
-      <a href="//commons.wikimedia.org/wiki/File:Flag_of_the_United_Nations.svg">
+      <a href="https://commons.wikimedia.org/wiki/File:Flag_of_the_United_Nations.svg">
       	<img src="/images/un_flag.png">
       </a>
       <p><%= t('content.cite') %></p>
     </footer>
   </blockquote>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Un_d%C3%AEner_de_philosophes.Jean_Huber.jpg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Un_d%C3%AEner_de_philosophes.Jean_Huber.jpg">
     	<img class="story_count_me__img" src="/images/story_count_me.jpg">
     </a>
     <h3><%= t('content.story_count_me_title') %></h3>
     <p><%= t('content.story_count_me_body') %></p>
   </div>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Expo-Flags.jpg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Expo-Flags.jpg">
     	<img src="/images/story_political_discussions.jpg" >
     </a>
     <h3><%= t('content.story_political_discussions_title') %></h3>
     <p><%= t('content.story_political_discussions_body') %></p>
   </div>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Toyogeki-Movie_Toyooka002.jpg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Toyogeki-Movie_Toyooka002.jpg">
     	<img class="story_room__img" src="/images/story_room.jpg">
     </a>
     <h3><%= t('content.story_room_title') %></h3>
     <p><%= t('content.story_room_body') %></p>
   </div>
 </div>
-
-
 <div class="clear"></div>
 <br><br>
-
 <div class="col-md-8 col-md-offset-2">
 	<div class="story">
 		<h3 id="government-request">
-			<small><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</small><br />
+			<small><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</small><br>
 			<%= t('privacy.govt_requests') %>
 		</h3>
-		<hr />
+		<hr>
 		<table>
 			<tr>
 				<td><%= t('graph.france') %></td>
@@ -122,9 +111,7 @@
 		</table>
 	</div>
 </div>
-
 <div class="clear"></div>
-
 <div class="col-md-12">
 	<div class="analytics">
 		<h2 id="requests-from"><%= t('content.graph_where_from') %></h2>
@@ -141,14 +128,12 @@
 			<li><a class="where_from_tabs" id="where_from_janjun17" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2017</a></li>
 			<li><a class="where_from_tabs active" id="where_from_juldec17" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2017</a></li>
 		</ul>
-
 		<div class="col-md-4" id="where_from_legend">
 			<h3><%= t('content.request_granted') %></h3>
 			<div>
 				<p class="legend legend_yes"><%= t('yn.yess') %></p>
 				<p class="legend legend_no"><%= t('yn.noo') %></p>
 			</div>
-
 			<section class="scorecard analytics__scorecard scorecard--1">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -156,7 +141,6 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<section class="scorecard analytics__scorecard scorecard--2">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -164,19 +148,13 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<div class="clear"></div>
-
 		</div>
-
 		<div class="col-md-7">
 			<div id="where_from_graph" class="bar_graph_horizontal"></div>
 		</div>
 		<div class="clear"></div>
-
 	</div>
-
-
 	<div class="analytics">
 		<h2 id="project-target"><%= t('content.graph_targeted_takedown') %></h2>
 		<ul class="tabs">
@@ -191,14 +169,12 @@
 			<li><a class="targeted_takedown_tabs" id="targeted_takedown_janjun17" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2017</a></li>
 			<li><a class="active targeted_takedown_tabs" id="targeted_takedown_juldec17" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2017</a></li>
 		</ul>
-
 		<div class="col-md-4" id="targeted_takedown_legend">
 			<h3><%= t('content.request_granted') %></h3>
 			<div>
 				<p class="legend legend_yes"><%= t('yn.yess') %></p>
 				<p class="legend legend_no"><%= t('yn.noo') %></p>
 			</div>
-
 			<section class="scorecard analytics__scorecard scorecard--1">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -206,7 +182,6 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<section class="scorecard analytics__scorecard scorecard--2">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -214,15 +189,11 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<div class="clear"></div>
-
 			<div class="fineprint">
 				<h2>*</h2><p><%= t('content.targeted_takedown_fineprint') %></p>
 			</div>
-
 		</div>
-
 		<div class="col-md-7">
 			<div id="targeted_takedown_graph" class="bar_graph_horizontal"></div>
 		</div>
@@ -230,8 +201,7 @@
 	</div>
 </div>
 <div class="clear"></div>
-<br /> <br /> <br /> <br />
-
+<br> <br> <br> <br>
 <div class="col-md-3">
   <section class="scorecard">
     <h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</h2>
@@ -248,15 +218,12 @@
     </dl>
   </section>
 </div>
-
 <div class="col-md-8">
   <h2><%= t('content.erasure_title') %></h2>
   <%= t('content.erasure_intro') %>
 </div>
-
 <div class="clear"></div>
-<br /> <br /> <br /> <br />
-
+<br> <br> <br> <br>
 <div class="col-md-3">
   <section class="scorecard">
     <h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</h2>
@@ -265,7 +232,6 @@
       <dd>12</dd>
     </dl>
   </section>
-
   <section class="scorecard scorecard_bottom">
     <h2><%= t('dates.jul') %> – <%= t('dates.dec') %> 2017</h2>
     <dl>
@@ -274,56 +240,49 @@
     </dl>
   </section>
 </div>
-
 <div class="col-md-8">
   <h2><%= t('content.dmca_title') %></h2>
   <%= t('content.dmca_intro') %>
   <blockquote>
     <p><%= t('content.erasure_quote') %></p>
     <footer>
-      <a href="//commons.wikimedia.org/wiki/File:Das_Recht_auf_Wissen_%E2%80%93_f%C3%BCr_eine_progressive_Netzpolitik_(6996713652).jpg">
+      <a href="https://commons.wikimedia.org/wiki/File:Das_Recht_auf_Wissen_%E2%80%93_f%C3%BCr_eine_progressive_Netzpolitik_(6996713652).jpg">
       	<img src="/images/lawrence.png">
       </a>
       <p><%= t('content.erasure_cite') %></p>
     </footer>
   </blockquote>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:World_Map_1689.JPG">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:World_Map_1689.JPG">
     	<img src="/images/story_quantity_quality.jpg">
     </a>
     <h3><%= t('content.story_quantity_quality_title') %></h3>
     <p><%= t('content.story_quantity_quality_body') %></p>
   </div>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Television_(8674797024).jpg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Television_(8674797024).jpg">
     	<img src="/images/story_spoiler.jpg">
     </a>
     <h3><%= t('content.story_spoiler_title') %></h3>
     <p><%= t('content.story_spoiler_body') %></p>
   </div>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Large_copyright_graffiti_sign_on_cream_colored_wall_(4273272605).jpg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Large_copyright_graffiti_sign_on_cream_colored_wall_(4273272605).jpg">
     	<img class="story_fair_share__img" src="/images/story_fair_share.jpg">
     </a>
     <h3><%= t('content.story_fair_share_title') %></h3>
     <p><%= t('content.story_fair_share_body') %></p>
   </div>
 </div>
-
 <div class="clear"></div>
 <br><br>
-
 <div class="col-md-12">
-
 	<div class="analytics">
 		<h2 id="dcma-takedown"><%= t('content.graph_dmca_requests') %></h2>
 		<ul class="tabs">
@@ -339,14 +298,12 @@
 			<li><a class="dmca_requests_tabs" id="dmca_requests_janjun17" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2017</a></li>
 			<li><a class="active dmca_requests_tabs" id="dmca_requests_juldec17" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2017</a></li>
 		</ul>
-
 		<div class="col-md-4" id="dmca_requests_legend">
 			<h3><%= t('content.request_granted') %></h3>
 			<div>
 				<p class="legend legend_yes"><%= t('yn.yess') %></p>
 				<p class="legend legend_no"><%= t('yn.noo') %></p>
 			</div>
-
 			<section class="scorecard analytics__scorecard scorecard--1">
 				<h2>Jul - Dec 2016</h2>
 			    <dl>
@@ -354,7 +311,6 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<section class="scorecard analytics__scorecard scorecard--2">
 				<h2>Jul - Dec 2016</h2>
 			    <dl>
@@ -362,17 +318,13 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<div class="clear"></div>
 		</div>
-
 		<div class="col-md-7">
 			<div id="dmca_requests_graph" class="bar_graph_horizontal"></div>
 		</div>
 		<div class="clear"></div>
-
 	</div>
-
 	<div class="analytics">
 		<h2 id="wikimedia"><%= t('content.graph_targeted_dmca') %></h2>
 		<ul class="tabs">
@@ -387,14 +339,12 @@
 			<li><a class="targeted_dmca_tabs" id="targeted_dmca_janjun17" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2017</a></li>
 			<li><a class="active targeted_dmca_tabs" id="targeted_dmca_juldec17" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2017</a></li>
 		</ul>
-
 		<div class="col-md-4" id="targeted_dmca_granted">
 			<h3><%= t('content.request_granted') %></h3>
 			<div>
 				<p class="legend legend_yes"><%= t('yn.yess') %></p>
 				<p class="legend legend_no"><%= t('yn.noo') %></p>
 			</div>
-
 			<section class="scorecard analytics__scorecard scorecard--1">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -402,7 +352,6 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<section class="scorecard analytics__scorecard scorecard--2">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -410,26 +359,19 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<div class="clear"></div>
-
 			<div class="fineprint">
 				<h2>*</h2><p><%= t('content.targeted_takedown_fineprint') %></p>
 			</div>
-
 			<div class="clear"></div>
 		</div>
-
 		<div class="col-md-7">
 			<div id="targeted_dmca_graph" class="bar_graph_horizontal"></div>
 		</div>
 		<div class="clear"></div>
 	</div>
 </div>
-
-
 <div class="clear"></div>
-
 <!-- Translations for JS -->
 <input type="hidden" id="t_total_requests" value="<%= t('privacy.total_requests') %>">
 <input type="hidden" id="t_request_granted" value="<%= t('graph.request_granted') %>">
