Fix logo handling for screenreaders
Output logo title on homepage, hiding it visually and
enable it for screnreaders only.

Bug: T173629
Change-Id: I0c94cfa520bcc3b5b1f529956596b1364aedb501

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -41,10 +41,8 @@
 						</button>
 
 						<a class="navbar-brand" href="<%= locale_url('./') %>">
-							<img src="/images/logo.png">
-							<% if request.path != 'index.html'  %>
-								<span class="name"><%= t('menu.title') %></span>
-							<% end %>
+							<img src="/images/logo.png" alt="">
+							<span class="name"><%= t('menu.title') %></span>
 						</a>
 					</div>
 					<div id="navbar-collapse" class="collapse navbar-collapse">
