--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -30,7 +30,7 @@
     <p><%= t('content.quote') %></p>
     <footer>
       <a href="https://commons.wikimedia.org/wiki/File:Flag_of_the_United_Nations.svg">
-      	<img src="/images/un_flag.png">
+      	<img src="/images/un_flag.png" alt="<%= t('content.quote_image') %>">
       </a>
       <p><%= t('content.cite') %></p>
     </footer>
@@ -39,7 +39,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Un_d%C3%AEner_de_philosophes.Jean_Huber.jpg">
-    	<img class="story_count_me__img" src="/images/story_count_me.jpg">
+    	<img class="story_count_me__img" src="/images/story_count_me.jpg" alt="">
     </a>
     <h3><%= t('content.story_count_me_title') %></h3>
     <p><%= t('content.story_count_me_body') %></p>
@@ -48,7 +48,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Expo-Flags.jpg">
-    	<img src="/images/story_political_discussions.jpg" >
+    	<img src="/images/story_political_discussions.jpg" alt="">
     </a>
     <h3><%= t('content.story_political_discussions_title') %></h3>
     <p><%= t('content.story_political_discussions_body') %></p>
@@ -57,7 +57,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Toyogeki-Movie_Toyooka002.jpg">
-    	<img class="story_room__img" src="/images/story_room.jpg">
+    	<img class="story_room__img" src="/images/story_room.jpg" alt="">
     </a>
     <h3><%= t('content.story_room_title') %></h3>
     <p><%= t('content.story_room_body') %></p>
@@ -247,7 +247,7 @@
     <p><%= t('content.erasure_quote') %></p>
     <footer>
       <a href="https://commons.wikimedia.org/wiki/File:Das_Recht_auf_Wissen_%E2%80%93_f%C3%BCr_eine_progressive_Netzpolitik_(6996713652).jpg">
-      	<img src="/images/lawrence.png">
+      	<img src="/images/lawrence.png" alt="<%= t('content.erasure_quote_image') %>">
       </a>
       <p><%= t('content.erasure_cite') %></p>
     </footer>
@@ -256,7 +256,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:World_Map_1689.JPG">
-    	<img src="/images/story_quantity_quality.jpg">
+    	<img src="/images/story_quantity_quality.jpg" alt="">
     </a>
     <h3><%= t('content.story_quantity_quality_title') %></h3>
     <p><%= t('content.story_quantity_quality_body') %></p>
@@ -265,7 +265,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Television_(8674797024).jpg">
-    	<img src="/images/story_spoiler.jpg">
+    	<img src="/images/story_spoiler.jpg" alt="">
     </a>
     <h3><%= t('content.story_spoiler_title') %></h3>
     <p><%= t('content.story_spoiler_body') %></p>
@@ -274,7 +274,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Large_copyright_graffiti_sign_on_cream_colored_wall_(4273272605).jpg">
-    	<img class="story_fair_share__img" src="/images/story_fair_share.jpg">
+    	<img class="story_fair_share__img" src="/images/story_fair_share.jpg" alt="">
     </a>
     <h3><%= t('content.story_fair_share_title') %></h3>
     <p><%= t('content.story_fair_share_body') %></p>
