--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -40,17 +40,17 @@
 							<span class="icon-bar"></span>
 						</button>
 
-						<a class="navbar-brand" href="<%= locale_url('./') %>">
+						<a class="navbar-brand" href="<%= locale_url('/') %>">
 							<img src="/images/logo.png" alt="">
 							<span class="name"><%= t('menu.title') %></span>
 						</a>
 					</div>
 					<div id="navbar-collapse" class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
-							<li><%= navigation_link( t('menu.privacy'), locale_url('./privacy.html') ) %></li>
-							<li><%= navigation_link( t('menu.content'), locale_url('./content.html') ) %></li>
-							<li><%= navigation_link( t('menu.stories'), locale_url('./stories.html') ) %></li>
-							<li><%= navigation_link( t('menu.faq'), locale_url('./faq.html') ) %></li>
+							<li><%= navigation_link( t('menu.privacy'), locale_url('/privacy.html') ) %></li>
+							<li><%= navigation_link( t('menu.content'), locale_url('/content.html') ) %></li>
+							<li><%= navigation_link( t('menu.stories'), locale_url('/stories.html') ) %></li>
+							<li><%= navigation_link( t('menu.faq'), locale_url('/faq.html') ) %></li>
 						</ul>
 					</div>
 				</nav>
@@ -58,16 +58,16 @@
 			<%= yield %>
 			<footer>
 				<div class="footer__block col-md-5">
-					<a href="<%= locale_url('./') %>" class="home_link">
+					<a href="<%= locale_url('/') %>" class="home_link">
 						<img src="/images/logo.png" alt="">
 						<span><%= t('menu.title') %></span>
 					</a>
 				</div>
 				<div class="footer__block col-md-2">
 					<ul>
-						<li><%= link_to t('menu.privacy'), locale_url('./privacy.html') %></li>
-						<li><%= link_to t('menu.content'), locale_url('./content.html') %></li>
-						<li><%= link_to t('menu.faq'), locale_url('./faq.html') %></li>
+						<li><%= link_to t('menu.privacy'), locale_url('/privacy.html') %></li>
+						<li><%= link_to t('menu.content'), locale_url('/content.html') %></li>
+						<li><%= link_to t('menu.faq'), locale_url('/faq.html') %></li>
 					</ul>
 				</div>
 				<div class="footer__block col-md-2">
