Add ARIA roles `main` and dedicated `contentinfo`
Although `<main>` is inheritent exposing `role=main`, we
provide it for elderly browsers.

Bug: T173629
Change-Id: I1e44383445c9b8645f1b4954b52958072973082d

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -55,8 +55,10 @@
 					</div>
 				</nav>
 			</header>
+			<main role="main">
 			<%= yield %>
-			<footer>
+			</main>
+			<footer role="contentinfo">
 				<div class="footer__block col-md-5">
 					<a href="<%= locale_url('/') %>" class="home_link">
 						<img src="/images/logo.png" alt="">
