Hide indiscernible links from screenreaders and fix heading structure
Hiding links with no discernible text, which are only carrying
aesthetic images without clear context relations from screenreaders
by adding `aria-hidden="true". Also:
- Fixing index heading structure
- Fixing CSS bug on mistakenly merged `font-size`/`line-height` value &
- Removing duplicated `id`

Bug: T173629
Change-Id: I90f1122a312c5a9d1defca09494d0b3809bb3541

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -38,7 +38,7 @@
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Un_d%C3%AEner_de_philosophes.Jean_Huber.jpg">
+    <a class="anchorImg" aria-hidden="true" href="https://commons.wikimedia.org/wiki/File:Un_d%C3%AEner_de_philosophes.Jean_Huber.jpg">
     	<img class="story_count_me__img" src="/images/story_count_me.jpg" alt="">
     </a>
     <h3><%= t('content.story_count_me_title') %></h3>
@@ -47,7 +47,7 @@
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Expo-Flags.jpg">
+    <a class="anchorImg" aria-hidden="true" href="https://commons.wikimedia.org/wiki/File:Expo-Flags.jpg">
     	<img src="/images/story_political_discussions.jpg" alt="">
     </a>
     <h3><%= t('content.story_political_discussions_title') %></h3>
@@ -56,7 +56,7 @@
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Toyogeki-Movie_Toyooka002.jpg">
+    <a class="anchorImg" aria-hidden="true" href="https://commons.wikimedia.org/wiki/File:Toyogeki-Movie_Toyooka002.jpg">
     	<img class="story_room__img" src="/images/story_room.jpg" alt="">
     </a>
     <h3><%= t('content.story_room_title') %></h3>
@@ -255,7 +255,7 @@
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:World_Map_1689.JPG">
+    <a class="anchorImg" aria-hidden="true" href="https://commons.wikimedia.org/wiki/File:World_Map_1689.JPG">
     	<img src="/images/story_quantity_quality.jpg" alt="">
     </a>
     <h3><%= t('content.story_quantity_quality_title') %></h3>
@@ -264,7 +264,7 @@
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Television_(8674797024).jpg">
+    <a class="anchorImg" aria-hidden="true" href="https://commons.wikimedia.org/wiki/File:Television_(8674797024).jpg">
     	<img src="/images/story_spoiler.jpg" alt="">
     </a>
     <h3><%= t('content.story_spoiler_title') %></h3>
@@ -273,7 +273,7 @@
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Large_copyright_graffiti_sign_on_cream_colored_wall_(4273272605).jpg">
+    <a class="anchorImg" aria-hidden="true" href="https://commons.wikimedia.org/wiki/File:Large_copyright_graffiti_sign_on_cream_colored_wall_(4273272605).jpg">
     	<img class="story_fair_share__img" src="/images/story_fair_share.jpg" alt="">
     </a>
     <h3><%= t('content.story_fair_share_title') %></h3>
@@ -520,8 +520,6 @@
 <input type="hidden" id="t_norwegian_wikipedia" value="<%= t('graph.norwegian_wikipedia') %>">
 <input type="hidden" id="t_not_a_wmf_site" value="<%= t('graph.not_a_wmf_site') %>">
 <input type="hidden" id="t_old_english_wikipedia" value="<%= t('graph.old_english_wikipedia') %>">
-<input type="hidden" id="t_persian_wikipedia" value="<%= t('graph.persian_wikipedia') %>">
-<input type="hidden" id="t_persian_wikipedia" value="<%= t('graph.persian_wikipedia') %>">
 <input type="hidden" id="t_persian_wikipedia" value="<%= t('graph.persian_wikipedia') %>">
 <input type="hidden" id="t_polish_wikipedia" value="<%= t('graph.polish_wikipedia') %>">
 <input type="hidden" id="t_portuguese_wikipedia" value="<%= t('graph.portuguese_wikipedia') %>">
