--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -312,21 +312,21 @@
 <br> <br> <br> <br>
 <div class="col-md-4">
   <div class="story">
-    <a href="https://commons.wikimedia.org/wiki/File:LED_Verkehrssicherungsbalken.jpg"><img src="/images/story_emergency.png" alt=""></a>
+    <a aria-hidden="true" href="https://commons.wikimedia.org/wiki/File:LED_Verkehrssicherungsbalken.jpg"><img src="/images/story_emergency.png" alt=""></a>
     <h3><%= t('privacy.story_emergency_title') %></h3>
     <p><%= t('privacy.story_emergency_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a href="https://commons.wikimedia.org/wiki/White_House#mediaviewer/File:SouthPorticoChristmas.jpg"><img src="/images/story_whitehouse.png" alt=""></a>
+    <a aria-hidden="true" href="https://commons.wikimedia.org/wiki/White_House#mediaviewer/File:SouthPorticoChristmas.jpg"><img src="/images/story_whitehouse.png" alt=""></a>
     <h3><%= t('privacy.story_whitehouse_title') %></h3>
     <p><%= t('privacy.story_whitehouse_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a href="https://commons.wikimedia.org/wiki/File:Suicide_Prevention_Day.jpg"><img src="/images/story_suicide.png" alt=""></a>
+    <a aria-hidden="true" href="https://commons.wikimedia.org/wiki/File:Suicide_Prevention_Day.jpg"><img src="/images/story_suicide.png" alt=""></a>
     <h3><%= t('privacy.story_suicide_title') %></h3>
     <p><%= t('privacy.story_suicide_body') %></p>
   </div>
